--- a/desatascos-bornos/index.html
+++ b/desatascos-bornos/index.html
@@ -7,9 +7,11 @@
       type="image/svg+xml"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚚</text></svg>"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta
-      name="descripion"
-      content="Servicio rápido de desatascos, fosas sépticas y limpieza de pavimentos en Bornos. Llama a José Manuel al 650 040 212."
+      name="description"
+      content="Servicio rápido de desatascos y limpieza de pavimentos en Bornos. Llama a José Manuel al 650 040 212."
     />
     <title>Desatascos Manuel | Urgencias 24h en Bornos y Sierra de Cádiz</title>
   </head>
